--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ pilot: false
 # Most workshops don't use extra pages. More information about extra
 # pages are included in the README:
 # https://github.com/carpentries/workshop-template#creating-extra-pages
-title: "Foundations for Research Computing Bootcamp, Python Section"
+title: "Foundations for Research Computing Python section"
 
 #------------------------------------------------------------
 # Incubator workshop settings (only relevant for workshops teaching a lesson
@@ -73,7 +73,10 @@ title: "Foundations for Research Computing Bootcamp, Python Section"
 # Generic settings (should not need to change).
 #------------------------------------------------------------
 
-# What kind of thing is this ("workshop" or "lesson")?
+# This setting (kind) takes configurations from the styles
+# template. Please do not modify this. If you are teaching 
+# a custom set of lessons or a single lesson, use a custom 
+# schedule.
 kind: "workshop"
 
 # Magic to make URLs resolve both locally and on GitHub.
@@ -110,7 +113,7 @@ pre_survey: "https://carpentries.typeform.com/to/wi32rS?slug="
 post_survey: "https://carpentries.typeform.com/to/UgVdRQ?slug="
 
 # Start time in minutes (0 to be clock-independent, 540 to show a start at 09:00 am).
-start_time: 0
+start_time: 540
 
 # Specify that things in the episodes collection should be output.
 collections:
